# RoboOrchardSim

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  orchard_config.toml  pyproject.toml  run_container.sh  setup.py
.agents/instructions/: default.instructions.md  environment.instructions.md  git.instructions.md  guidance-authoring.instructions.md  prepare_env.instructions.md  python.instructions.md  test.instructions.md  workflow.instructions.md
.agents/skills/feature-dev/: SKILL.md
.agents/skills/remote-codereview/: REPORT_TEMPLATE.md  SKILL.md
.agents/skills/usd-asset-batch-labelling/: SKILL.md
docker/: README.md  run_container.sh
docs/: TUTORIAL.md  release_note.rst
examples/isaac/: launcher_example.py  orchard_launch.py
examples/manipulation-app/configs/: eval_example.yaml
examples/manipulation-app/scripts/: data_synthesis_example.py  eval_policy.py  simple_orchard_env_example.py
robo_orchard_sim/: __init__.py  __version__.py  launcher.py  sim_ctx.py
robo_orchard_sim/asset_manager/: __init__.py
robo_orchard_sim/asset_manager/registry/: __init__.py  build_index.py  errors.py  registry.py  types.py  urdf_parser.py
robo_orchard_sim/asset_manager/resolver/: __init__.py  asset_resolver.py
robo_orchard_sim/asset_manager/snapshot/: __init__.py  __main__.py  (+4 more)
robo_orchard_sim/benchmark/: __init__.py  base.py  registration.py  registry.py
robo_orchard_sim/cfg_wrappers/: __init__.py  assets_cfg.py  scenes_cfg.py  schemas.py  sensor_cfg.py  spawners.py
robo_orchard_sim/contracts/: __init__.py  joint_command.py  policy_binding.py
robo_orchard_sim/envs/: __init__.py  env_base.py  manager_based_env.py
robo_orchard_sim/evaluator/: __init__.py  base.py  evaluator.py
robo_orchard_sim/models/: prim.py
robo_orchard_sim/orchard_env/: __init__.py  orchard_env.py
robo_orchard_sim/pipeline/: __init__.py
robo_orchard_sim/policy/: DummyPolicy.py  __init__.py  action_layout.py  canonicalizer.py  factory.py  gripper_codec.py  server.py
robo_orchard_sim/sim/: __init__.py  context.py
robo_orchard_sim/task_components/: __init__.py
robo_orchard_sim/task_suite/: __init__.py  base.py  registration.py  registry.py
robo_orchard_sim/utils/: config.py  env_utils.py  usd.py
scm/: check_prepare_env.py  install_constraints.txt  patch_isaac.py  requirements.txt
scm/qac/: check_license_header.py
tests/: Makefile
tests/python/: robo_orchard_ut_utils.py  test_settle_light.py  test_task_base_light.py  test_validator_gripper_ratio.py  test_validator_metrics_light.py
tools/asset_pipeline/: README.md  generate_interaction.py  requirements.txt  run_caption_labeller.py  run_labeller.py  run_tag_labeller.py
(+414 files in other folders)
